# CmakeExample

./: README.md
armadillo_example/: CMakeLists.txt  su.cpp
armadillo_example/src/: main.cpp
boost/: CMakeLists.txt
boost/src/: boost.cpp
cppPytorch/: CMakeLists.txt
cppPytorch/include/: mainTorch.h
cppPytorch/src/: mainTorch.cpp
eigen_example/example1/: CMakeLists.txt
eigen_example/example1/src/: main.cpp
eigen_example/example2-solverEigen/: CMakeLists.txt  Readme
eigen_example/example2-solverEigen/src/: main.cpp
helloworld/: CMakeCache.txt  Makefile  cmake_install.cmake
runPyViaCpp/pure/: CMakeLists.txt
runPyViaCpp/pure/src/: main.cpp
runPyViaCpp/pybind/: CMakeLists.txt  Makefile
runPyViaCpp/pybind/src/: main.cpp
studentlib_shared/: CMakeLists.txt
usestudentlib/: CMakeLists.txt
